# s

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-02-28-ai-mixing-company-design.md  2026-02-28-logic-au-copilot-mvp.md
docs/testing/: logic-au-validation.md
scripts/dev/: install-for-logic.sh
scripts/release/: run-validation.sh
scripts/verify/: audio_regression.py
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/analysis/: MuddyDetector.cpp  MuddyDetector.h
src/audio/: FeatureExtractor.cpp  FeatureExtractor.h
src/engine/: SessionState.cpp  SessionState.h  SuggestionEngine.cpp  SuggestionEngine.h
src/nlp/: IntentParser.cpp  IntentParser.h
src/profile/: StyleProfile.cpp  StyleProfile.h
src/ui/: RationalePanel.cpp  RationalePanel.h
tests/analysis/: test_muddy_detector.cpp
tests/audio/: test_feature_extractor.cpp
tests/engine/: test_session_state.cpp  test_suggestion_engine.cpp
tests/nlp/: test_intent_parser.cpp
tests/ui/: test_rationale_format.cpp
